--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,58 @@
-.env
+# 🐍 Python / Django
 __pycache__/
+*.py[cod]
+*.sqlite3
+*.log
+*.pot
+*.pyc
+instance/
+.env
+.env.*
+
+# Django specific
+db.sqlite3
+media/
+staticfiles/
+static/
+local_settings.py
+
+# 🛠 Node / Frontend
+frontend/node_modules/
+frontend/build/
+frontend/coverage/
+frontend/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnp
+.pnp.js
+
+# 📦 Deployment
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# 💻 IDEs (PyCharm, VSCode, etc.)
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+
+# 📂 System Files (Windows / macOS)
+.DS_Store
+Thumbs.db
+
+# 🔥 Render Deployment
+render.yaml
+
+# 🐧 Linux / Windows / Mac temporäre Dateien
+*.swp
+*.bak
+*.tmp
+
+# 🛡️ Git
+*.orig
+*.rej
+
 
